# sihhuri

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  makerelease.sh
.tx/: config
service/: CMakeLists.txt  sihhuri.service.in  sihhuri.timer
src/: CMakeLists.txt  abstractbackup.cpp  abstractbackup.h  backupmanager.cpp  backupmanager.h  cyrusbackup.cpp  cyrusbackup.h  dbbackup.cpp  dbbackup.h  directorybackup.cpp  directorybackup.h  giteabackup.cpp  giteabackup.h  joomlabackup.cpp  joomlabackup.h  main.cpp  matomobackup.cpp  matomobackup.h  nextcloudbackup.cpp  nextcloudbackup.h  returncodes.h  roundcubebackup.cpp  roundcubebackup.h  wordpressbackup.cpp  wordpressbackup.h
translations/: CMakeLists.txt  sihhuri.ts  sihhuri_de.ts
